# cc-django-project

./: .travis.yml  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: .env  .gitignore  .pre-commit-config.yaml  Procfile  README.rst  circle.yml  conftest.py  docker-compose.yml  fig.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
{{cookiecutter.repo_name}}/requirements/: base.txt  dev.txt
{{cookiecutter.repo_name}}/uwsgi/: production.ini
{{cookiecutter.repo_name}}/web/: manage.py
{{cookiecutter.repo_name}}/web/{{cookiecutter.package_name}}/settings/: base.py  mixins.py  prod.py
{{cookiecutter.repo_name}}/workflows/: ci.yml
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: urls.py  wsgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/settings/: __init__.py  base.py  ci.py  dev.py  mixins.py  prod.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/templates/: base.html
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/users/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: .env  conftest.py  docker-compose.yml  manage.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/settings/: __init__.py  base.py  dev.py  prod.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/templates/: base.html
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.client}}/: wsgi.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: urls.py
(+6 files in other folders)
