[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
django-configurations = "^2.3.1"
dj-database-url = "^0.5.0"
django-cache-url = "^3.2.3"
django-extensions = "^3.1.5"
django-braces = "^1.15.0"
Pillow = "^8.4.0"
structlog = "^21.5.0"
sentry-sdk = "^1.5.1"
django-redis-cache = "^3.0.0"
uWSGI = "^2.0.20"
psycopg2 = "^2.9.2"
django-storages = "^1.12.3"
django-webtest = "1.9.9"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
Werkzeug = "0.14.1"
django-debug-toolbar = "3.2.4"
ipython = "6.4.0"
Sphinx = "1.7.4"
docutils = "0.14"
sphinx-rtd-theme = "0.3.1"
WebTest = "2.0.29"
django-webtest = "1.9.9"
factory-boy = "2.11.1"
selenium = "3.12.0"
splinter = "0.8.0"
pytest = "3.5.1"
pytest-cache = "1.0"
pytest-cov = "2.5.1"
pytest-django = "3.2.1"
pytest-splinter = "1.8.5"
coverage = "4.5.1"
coveralls = "1.3.0"
honcho = "^1.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
